# quarto-maths

./: .aspell.en.pws  .commitlintrc.yaml  .dockerignore  .gitignore  .prettierignore  .pyspelling.yaml  Dockerfile  README.md  _metadata.yml  _quarto.yaml  _quarto.yml  about.qmd  apple.qmd  bad  blog.qmd  builder.yaml  dark.scss  example.qmd  index.qmd  nginx.conf  package-lock.json  package.json  prettier.config.js  pyproject.toml  quicksort.py  spellcheck.lua  test.py  tsconfig.json  typedoc.config.js  typedoc.quarto.mjs  yamlfmt.yaml
.github/workflows/: build.yaml  (+6 more)
acederbergio/: __main__.py  bucket.py  config.py  db.py  dev.py  docs.py  env.py  iconify.py  iconify_kubernetes.py  meta.py  pdf.py  util.py  verify.py  watch.py
blog/: _metadata.yml  _quarto.yaml  _variables.yaml  build.qmd  error.qmd  glow.qmd  iframe-example.qmd  index.qmd  landing-page.qmd  logs.qmd  pyproject.toml  robots.txt  temp.qmd  test.qmd  todo.qmd  watch.py
blog/components/floaty/: _metadata.yaml  contacts.qmd  index.qmd  links-and-contents.qmd  links.qmd  responsive.qmd  resume-contacts.qmd  resume-links.qmd  resume.qmd  skills.qmd  temp.py  under-construction.qmd
blog/components/iframe/: _metadata.yaml  index.qmd
blog/components/overlay/: index.qmd
blog/components/resume/: _example_experience.qmd  _metadata.yaml  education.qmd  experience.qmd  index.qmd
blog/dev/: _live_quarto_table.qmd  _metadata.yaml  example.js  index.qmd  live.qmd  logs.qmd  pdf.qmd  plan.qmd  quarto.qmd  resume.qmd  scss.qmd  terminal.scss  testOverlay.js  todo.qmd
blog/dsa/graph/: __init__.py
blog/dsa/leetcode/: index.qmd
blog/dsa/leetcode/bt/: index.qmd
blog/dsa/leetcode/bt/balance/: __init__.py
blog/dsa/leetcode/bt/from_desc/: __init__.py  index.qmd
blog/dsa/leetcode/bt/inorder/: __init__.py  index.qmd
blog/dsa/leetcode/bt/is_balanced/: __init__.py
blog/dsa/leetcode/calendar_1/: index.qmd
blog/dsa/leetcode/calendar_2/: __init__.py  _oops.qmd  cases.yaml  index.qmd
blog/dsa/leetcode/chair_numbers/: __init__.py  index.qmd
blog/dsa/leetcode/divide_players/: __init__.py  index.qmd
blog/dsa/leetcode/linked_list_rm/: index.qmd
blog/dsa/leetcode/longest_pfx/: __init__.py  index.qmd
blog/dsa/leetcode/longest_substring_nonrepeating/: index.qmd
blog/dsa/leetcode/make_sum_divisible/: __init__.py  index.qmd
blog/dsa/leetcode/max_ramp_width/: __init__.py  index.qmd
blog/dsa/leetcode/min_add/: __init__.py  index.qmd
blog/dsa/leetcode/min_str_len_after_rm/: __init__.py  index.qmd
blog/dsa/leetcode/min_swaps/: __init__.py  index.qmd
blog/dsa/leetcode/minimum_time_difference/: index.qmd
blog/dsa/leetcode/palandrome/: __init__.py
blog/dsa/leetcode/palandrome_shortest/: actual.py  actual.qmd
blog/dsa/leetcode/palindrome_shortest/: index.qmd
blog/dsa/leetcode/parentheses/: __init__.py
blog/dsa/leetcode/rank_transform/: cases.yaml  index.qmd
blog/dsa/leetcode/stack_incr/: __init__.py  cases.yaml
blog/dsa/leetcode/sum_of_prefix_scores/: cases.yaml
blog/dsa/leetcode/twosum/: index.qmd
blog/dsa/leetcode/zigzag/: index.qmd
blog/dsa/queue/: __init__.py
blog/dsa/stack/: __init__.py
blog/example/: accordian.qmd  carousel-02.qmd  carousel.qmd  progress.qmd  skills.qmd
blog/experiments/: overlay.qmd  test.qmd
blog/filters/: contacts.py  dev.py  floaty.py  iframe.py  links.py  live.py  mermaid.py  minipage.py  overlay.py  resume.py  skills.py  under_construction.py
blog/icons/: misc.json
blog/includes/: external_links.html  iconify.html  mermaid.html  overlay.html  temp.html  tooltip.html
blog/js/: _readme.md  asciiart.js  error.js  floaty.js  index.js  live.js  live.qmd  overlay.js  pdf.js  slidey.js  testOverlay.js  todo.js  util.js
blog/js/live/: banner.js  index.js  input.js  quarto.js  server.js  util.js  viewer.js
blog/kaggle/: index.qmd
blog/posts/: _metadata.yml  index.qmd  nvim-notes.qmd  pandas-typing.qmd
blog/posts/iconify/: iconify.html  index.qmd  mermaid.html
blog/posts/include-code-files/: index.qmd
blog/posts/keywords/: extraction-process.mmd  index.qmd  sklearn.qmd
blog/posts/logistic/: cobwebs.qmd  index.qmd
blog/posts/neovim-queries-case-study/: index.qmd
blog/posts/numpy-type-hints/: index.qmd
blog/posts/python-animation/: index.qmd
blog/posts/quarto-kube-static/: example.yaml  index.qmd
blog/projects/: index.qmd
blog/projects/automation/: actions.qmd  index.qmd  why-pulumi.qmd
blog/projects/blog/: build.mmd  build.qmd  deploy.qmd  index.qmd  instructions.qmd  qa.qmd  readme.qmd  watch.qmd
blog/projects/captura/: about.qmd  index.qmd
blog/projects/nvim-config/: _quarto.yaml  gallery.qmd  index.qmd
blog/resume/: _metadata.yaml  about.qmd  copy.js  cover-letter.qmd  elements.lua  example.lua  example.qmd  fenced.lua  index.qmd  links.lua  notes.qmd  resume-2.qmd  resume.qmd  resume.yaml  template.tex  test.qmd  test.tex  test_filter.py  title.tex
blog/resume/partials/: _blog.qmd  _consulting.qmd  _contact.qmd  _headshot.qmd  _links.qmd  _mve-overlay.qmd  _mve.qmd  _profile.qmd  _projects.qmd  _research.qmd  _resume_latest.qmd  _resume_website.qmd  _skills.qmd  _tex_filler.qmd  _title.qmd  _unm.qmd  consulting.qmd  education.qmd  mve.qmd  profile.qmd  skills.qmd
blog/resume/templates/: template.tex
blog/themes/: commits.css  dark-default.scss  dark.scss  extras.scss  floaty.css  floaty.scss  glow.scss  index.css  index.scss  landing-page.scss  live.scss  overlay.css  overlay.scss  resume.css  resume.scss  terminal.scss
docker/: compose.builder.yaml  compose.prod.yaml  compose.yaml  docker.sh  dockerfile  tokenreview.yaml
dsa/: _metadata.yml  index.qmd
examples/: index.qmd
icons/: index.qmd
kaggle/: _metadata.yml  index.qmd
posts/: _metadata.yml  demo.qmd  index-listing.json  index.html  index.qmd  latex.qmd  logistic.qmd  penguin.qmd  quarto-kubernetes.qmd
scripts/: __main__.py  config.py  env.py  iconify.py  iconify_kubernetes.py  meta.py  res.py  watch.py
templates/: metadata.html
tests/: conftest.py  test_bst.py  test_graph.py  test_queue.py  test_stack.py
themes/: dark.scss  index.css  index.scss
(+116 files in other folders)
